--- a/_config.yml
+++ b/_config.yml
@@ -25,13 +25,31 @@ execute:
 #   - references.bib
 
 # Information about where the book exists on the web
-# repository:
-#   url: https://github.com/executablebooks/jupyter-book # Online location of your book
-#   path_to_book: docs # Optional path to your book, relative to the repository root
-#   branch: master # Which branch of the repository should be used when creating links (optional)
+repository:
+  url: https://github.com/shinonome-inc/PythonTutorialForDSCourse # Online location of your book
+  path_to_book: . # Optional path to your book, relative to the repository root
+  branch: main # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 # html:
-# use_issues_button: true
-# use_repository_button: true
+#   use_issues_button: true
+#   use_repository_button: true
+
+#   path_to_book: path/to/book # Optional path to your book, relative to the repository root
+#   branch: master # Which branch of the repository should be used when creating links (optional)
+
+launch_buttons:
+  binderhub_url: ""
+  colab_url: "https://colab.research.google.com"
+
+parse:
+  myst_enable_extensions:
+    # don't forget to list any other extensions you want enabled,
+    # including those that are enabled by default! See here: https://jupyterbook.org/en/stable/customize/config.html
+    - html_image
+    - dollarmath
+
+sphinx:
+  config:
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
